--- a/hotels.html
+++ b/hotels.html
@@ -16,7 +16,7 @@
 					 <li><a href="#">Информация</a></li>
 					 <li><a href="#">Фото и видео</a></li>
 					 <li><a href="#">Карта штата</a></li>
-					 <li><a>Гостиницы</a></li>
+					 <li><a class="current-page" href="#">Гостиницы</a></li>
 				 </ul>
 			 </nav>
 			</header>
@@ -30,15 +30,15 @@
 						<legend>Инфраструктура:</legend>
 						<ul class="filter-list">
 							<li>
-								<input class="filter-input" type="checkbox" name="pool" id="filter-pool" checked>
+								<input type="checkbox" name="pool" id="filter-pool" checked>
 								<label for="filter-pool">Бассейн</label>
 							</li>
 							<li>
-								<input class="filter-input" type="checkbox" name="parking" id="filter-parking">
+								<input type="checkbox" name="parking" id="filter-parking" disabled>
 								<label for="filter-parking">Парковка</label>
 							</li>
 							<li>
-								<input class="filter-input" type="checkbox" name="wi-fi" id="filter-wi-fi">
+								<input type="checkbox" name="wi-fi" id="filter-wi-fi">
 								<label for="filter-wi-fi">Wi-Fi</label>
 							</li>
 						</ul>
@@ -47,24 +47,34 @@
 						<legend>Тип жилья:</legend>
 						<ul class="filter-list">
 							<li>
-								<input class="filter-input" type="checkbox" name="hotel" id="filter-hotel" checked>
+								<input type="checkbox" name="hotel" id="filter-hotel" checked>
 								<label for="Гостиница">Гостиница</label>
 							</li>
 							<li>
-								<input class="filter-input" type="checkbox" name="motel" id="filter-motel" checked>
+								<input type="checkbox" name="motel" id="filter-motel" checked>
 								<label for="filter-motel">Мотель</label>
 							</li>
 							<li>
-								<input class="filter-input" type="checkbox" name="apartment" id="filter-apartment" checked>
+								<input type="checkbox" name="apartment" id="filter-apartment" checked>
 								<label for="filter-apartment">Апартаменты</label>
 							</li>
+							
 						</ul>
 					</fieldset>
-					<fieldset>
+					<fieldset class="filter-range">
 						<legend>Стоимость в сутки (Р):</legend>
-						<span>от 0</span>
-						<span>до 3000</span>
-						<button class="filter-btn" type="submit">Показать</button>
+						<div class="price-controls">
+							<label class="min-price">от <input type="text" name="min-price" value="0"></label>
+							<label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+						</div>
+						<div class="range-controls">
+							<div class="scale">
+								<div class="bar"></div>
+							</div>
+							<div class="range-toggle range-toggle-min"></div>
+							<div class="range-toggle range-toggle-max"></div>
+						</div>
+						<button class="btn filter-btn" type="submit">Показать</button>
 					</fieldset>
 					
 				</form>
@@ -73,46 +83,100 @@
 			<section class="result">
 				<h2 class="invisible">Результаты поиска</h2>
 				<div class="sort">
-					<span class="total">Найдено: 3</span>
+					<p class="total">Найдено: 3</p>
 					<h3>Сортировка:</h3>
 					<ul class="sort-list">
-						<li>По цене</li>
-						<li>По типу</li>
-						<li>По рейтингу</li>
+						<li class="sort-item"><a class="active" href="#">По цене</a></li>
+						<li class="sort-item"><a href="#">По типу</a></li>
+						<li class="sort-item"><a href="#">По рейтингу</a></li>
 					</ul>
-					<span class="sorting-controls"></span>
+					<p class="sorting-controls">
+						<a href="#">
+						  <span class="invisible">Вверх</span>
+							<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path fill="#cacaca" d="M5.5 0L0 10h11z"/></svg>
+						</a>
+						<a class="current" href="#">
+							<span class="invisible">Вниз</span>
+							<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path fill="#cacaca" d="M5.5 10L0 0h11"/></svg>
+						</a>
+					</p>
 				</div>
 				<ul class="result-items">
 					<li>
-						<img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
-						<h3><a class="item-title" href="#">Amara Resort & Spa</a></h3>
-						<span>гостиница</span>
-						<span>от 4000 Р.</span>
-						<a class="btn detail-btn">Подробнее</a>
-						<a class="btn booking-btn">Забронировать</a>
-						<span class="star-rating">4</span>
-						<span class="rating">Рейтинг: 8,5</span>
+						<div class="img-item">
+							<a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
+						</div>
+						<div class="description-item">
+							<a class="item-title" href="#"><h3>Amara Resort & Spa</h3></a>
+							<div class="item-wrapper">
+								<p>гостиница</p>
+								<a href="#" class="btn detail-btn">Подробнее</a>
+							</div>
+							<div class="item-wrapper">
+								<p>от 4000 Р.</p>
+								<a href="#" class="btn booking-btn">Забронировать</a>
+							</div>
+						</div>
+						<div class="rating-item">
+							<p class="star-rating">
+								<span class="invisible">4 звезды</span>
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+							</p>
+							<span class="rating">Рейтинг: 8,5</span>
+						</div>
 					</li>
 					<li>
-						<img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
-						<h3><a class="item-title" href="#">Desert Quail Inn</a></h3>
-						<span>мотель</span>
-						<span>от 3000 Р.</span>
-						<a class="btn detail-btn">Подробнее</a>
-						<a class="btn booking-btn">Забронировать</a>
-						<span class="star-rating">3</span>
-						<span class="rating">Рейтинг: 8,9</span>
+						<div class="img-item">
+							<a href="#"><img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
+						</div>
+						<div class="description-item">
+							<a class="item-title" href="#"><h3>Desert Quail Inn</h3></a>
+							<div class="item-wrapper">
+								<p>мотель</p>
+								<a href="#" class="btn detail-btn">Подробнее</a>
+							</div>
+							<div class="item-wrapper">
+								<p>от 3000 Р.</p>
+								<a href="#" class="btn booking-btn">Забронировать</a>
+							</div>
+						</div>
+						<div class="rating-item">
+							<p class="star-rating">
+								<span class="invisible">3 звезды</span>
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+							</p>
+							<span class="rating">Рейтинг: 8,9</span>
+						</div>
 					</li>
 					<li>
-						<img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
-						<h3><a class="item-title" href="#">Villas at Poco Diablo</a></h3>
-						<h4></h4>
-						<span>апартаменты</span>
-						<span>от 2000 Р.</span>
-						<a class="btn detail-btn">Подробнее</a>
-						<a class="btn booking-btn">Забронировать</a>
-						<span class="star-rating">2</span>
-						<span class="rating">Рейтинг: 9,2</span>
+						<div class="img-item">
+							<a href="#"><img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
+						</div>
+						<div class="description-item">
+							<a class="item-title" href="#"><h3>Villas at Poco Diablo</h3></a>
+							<div class="item-wrapper">
+								<p>апартаменты</p>
+								<a href="#" class="btn detail-btn">Подробнее</a>
+							</div>
+							<div class="item-wrapper">
+								<p>от 2000 Р.</p>
+								<a href="#" class="btn booking-btn">Забронировать</a>
+							</div>
+						</div>
+						<div class="rating-item">
+							<p class="star-rating">
+								<span class="invisible">2 звезды</span>
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+							</p>
+							<span class="rating">Рейтинг: 9,2</span>
+						</div>
 					</li>
 				</ul>
 			</section>
