--- a/hotels.html
+++ b/hotels.html
@@ -48,7 +48,7 @@
 						<ul class="filter-list">
 							<li>
 								<input type="checkbox" name="hotel" id="filter-hotel" checked>
-								<label for="Гостиница">Гостиница</label>
+								<label for="filter-motel">Гостиница</label>
 							</li>
 							<li>
 								<input type="checkbox" name="motel" id="filter-motel" checked>
@@ -120,10 +120,10 @@
 						<div class="rating-item">
 							<p class="star-rating">
 								<span class="invisible">4 звезды</span>
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
 							</p>
 							<span class="rating">Рейтинг: 8,5</span>
 						</div>
@@ -146,9 +146,9 @@
 						<div class="rating-item">
 							<p class="star-rating">
 								<span class="invisible">3 звезды</span>
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
 							</p>
 							<span class="rating">Рейтинг: 8,9</span>
 						</div>
@@ -171,9 +171,8 @@
 						<div class="rating-item">
 							<p class="star-rating">
 								<span class="invisible">2 звезды</span>
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
-								<img src="img/star.svg" width="18px" height="17px" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
+								<img src="img/star.svg" width="18" height="17" alt="звезда">
 							</p>
 							<span class="rating">Рейтинг: 9,2</span>
 						</div>
